[package]
edition = "2021"
name = "locket"
version = "0.1.0"


[features]
default = []
async = []
parking_lot = ["dep:parking_lot", "std"]
spin = ["dep:spin"]
std = []
std-lock = ["std"]

async-lock = ["dep:async-lock", "dep:pin-project-lite", "async"]
tokio = ["dep:tokio", "async"]
async-std = ["dep:async-std", "async"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "rwlock",
], optional = true }

async-lock = { version = "3", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
async-std = { version = "1", optional = true }
